@@ -406,7 +406,7 @@ namespace libtorrent
 #endif
 
 			torrent_handle add_torrent(add_torrent_params const&, error_code& ec);
-			torrent_handle add_torrent_impl(add_torrent_params const&, error_code& ec);
+			boost::shared_ptr<torrent> add_torrent_impl(add_torrent_params& p, error_code& ec);
 			void async_add_torrent(add_torrent_params* params);
 			void on_async_load_torrent(disk_io_job const* j);
 
